--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.bombtime.bombtime.BaseActivity" />
         </activity>
+
+        <activity
+            android:name="org.bbs.android.commonlib.activity.LogcatActivity"
+            android:label="androidcommonlib/LogcatActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
