--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,10 @@ android {
         applicationId "com.bombtime.bombtime"
         minSdkVersion 14
         targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
+
+        // use AndroidManifest's to couple with eclipse.
+//        versionCode 1
+//        versionName "1.0"
     }
     buildTypes {
         release {
