--- a/app/src/main/.classpath
+++ b/app/src/main/.classpath
@@ -8,5 +8,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="lib" path="/mnt/workbench/BombTime/app/libs/ormlite-android-4.41.jar"/>
 	<classpathentry exported="true" kind="lib" path="/mnt/workbench/BombTime/app/libs/ormlite-core-4.41.jar"/>
+	<classpathentry exported="true" kind="lib" path="/mnt/workbench/BombTime/app/libs/android_common_lib.jar"/>
+	<classpathentry exported="true" kind="lib" path="/mnt/workbench/BombTime/app/libs/android-support-v7-recyclerview.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
