--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    android:versionCode="1"
+    android:versionName="0.0.1"
     package="com.bombtime.bombtime" >
 
-    <uses-sdk android:minSdkVersion="14" />
-
     <android:uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18" />
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <android:uses-permission
-        android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18" />
+        android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-sdk android:targetSdkVersion="22" android:minSdkVersion="14"/>
 
     <application
         android:name=".Application"
@@ -29,7 +29,7 @@
         </activity>
         <activity
             android:name=".AddTaskActivity"
-            android:label="@string/app_name" >
+            android:parentActivityName=".BaseActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
@@ -45,7 +45,7 @@
 
         <activity
             android:name="org.bbs.android.commonlib.activity.LogcatActivity"
-            android:label="androidcommonlib/LogcatActivity"
+            android:label="Logcat"
             android:process=":logcat">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
