--- a/app/src/main/.classpath
+++ b/app/src/main/.classpath
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="src" path="java"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry exported="true" kind="lib" path="/mnt/workbench/BombTime/app/libs/ormlite-android-4.41.jar"/>
-	<classpathentry exported="true" kind="lib" path="/mnt/workbench/BombTime/app/libs/ormlite-core-4.41.jar"/>
-	<classpathentry exported="true" kind="lib" path="/mnt/workbench/BombTime/app/libs/android_common_lib.jar"/>
-	<classpathentry exported="true" kind="lib" path="/mnt/workbench/BombTime/app/libs/android-support-v7-recyclerview.jar"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="gen"/>
+	<classpathentry exported="true" kind="var" path="ORMLITE_CORE_LIB"/>
+	<classpathentry exported="true" kind="var" path="ANDROID_COMMON_LIB"/>
+	<classpathentry exported="true" kind="var" path="ORMLITE_ANDROID_LIB"/>
+	<classpathentry exported="true" kind="var" path="RECYCLERVIEW_LIB"/>
+	<classpathentry exported="true" kind="var" path="BUTTERKNIFE_LIB"/>
+	<classpathentry exported="true" kind="var" path="SWIPEMENULISTVIEW_LIB"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
