--- a/app/src/main/.classpath
+++ b/app/src/main/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry exported="true" kind="var" path="RECYCLERVIEW_LIB"/>
 	<classpathentry exported="true" kind="var" path="BUTTERKNIFE_LIB"/>
 	<classpathentry exported="true" kind="var" path="SWIPEMENULISTVIEW_LIB"/>
+	<classpathentry kind="var" path="ANDROID_SUPPORT_V4_LIB"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
